--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <!-- Slide Show -->
 <section>
-  <img class="mySlides" src="img_band_la.jpg"
+  <img class="mySlides" src="../img/homeless1.jpg"
   style="width:100%">
-  <img class="mySlides" src="img_band_ny.jpg"
+  <img class="mySlides" src="../img/homeless2.jpg"
   style="width:100%">
-  <img class="mySlides" src="img_band_chicago.jpg"
+  <img class="mySlides" src="../img/homeless3.jpg"
   style="width:100%">
 </section>
 
