--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <!-- Slide Show -->
 <section>
-  <img class="mySlides" src="../img/homeless1.jpg"
+  <img class="mySlides" src="/img/homeless1.jpg" alt="Homeless1"
   style="width:100%">
-  <img class="mySlides" src="../img/homeless2.jpg"
+  <img class="mySlides" src="/img/homeless2.jpg" alt="Homeless2"
   style="width:100%">
-  <img class="mySlides" src="../img/homeless3.jpg"
+  <img class="mySlides" src="/img/homeless3.jpg" alt="Homeless3"
   style="width:100%">
 </section>
 
