--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <section class="w3-row-padding w3-center w3-light-grey">
   <article class="w3-third">
     <p>John</p>
-    <img src="img_bandmember.jpg" alt="Random Name" style="width:100%">
+    <img src="/img/homeless2.jpg" alt="Random Name" style="width:100%">
     <p>John is the smartest.</p>
   </article>
   <article class="w3-third">
