--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <!-- Slide Show -->
 <section>
-  <img class="mySlides" src="/img/homeless1.jpg" alt="Homeless1"
+  <img class="mySlides" src="img/homeless1.jpg" alt="Homeless1"
   style="width:100%">
-  <img class="mySlides" src="/img/homeless2.jpg" alt="Homeless2"
+  <img class="mySlides" src="img/homeless2.jpg" alt="Homeless2"
   style="width:100%">
-  <img class="mySlides" src="/img/homeless3.jpg" alt="Homeless3"
+  <img class="mySlides" src="img/homeless3.jpg" alt="Homeless3"
   style="width:100%">
 </section>
 
@@ -37,7 +37,7 @@
 <section class="w3-row-padding w3-center w3-light-grey">
   <article class="w3-third">
     <p>John</p>
-    <img src="/img/homeless2.jpg" alt="Random Name" style="width:100%">
+    <img src="img/homeless2.jpg" alt="Random Name" style="width:100%">
     <p>John is the smartest.</p>
   </article>
   <article class="w3-third">
