--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   style="width:100%">
   <img class="mySlides" src="img/homeless2.jpg" alt="Homeless2"
   style="width:100%">
-  <img class="mySlides" src="img/homeless3.jpg" alt="Homeless3"
+ <!-- <img class="mySlides" src="img/homeless3.jpg" alt="Homeless3"
   style="width:100%">
-</section>
+</section> -->
 
 <!-- Band Description -->
 <section class="w3-container w3-center w3-content" style="max-width:600px">
