--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <!-- Slide Show -->
 <section>
-  <img class="mySlides" src="img/homeless1.jpg" alt="Homeless1"
+  <img class="mySlides" src="img/homeless1.png" alt="Homeless1"
   style="width:100%">
-  <img class="mySlides" src="img/homeless2.jpg" alt="Homeless2"
+  <img class="mySlides" src="img/homeless2.png" alt="Homeless2"
   style="width:100%">
  <!-- <img class="mySlides" src="img/homeless3.jpg" alt="Homeless3"
   style="width:100%">
