--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/w3css/3/w3.css">
+<link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body>
 
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
+<nav class="ul">
   <a href="#home" class="w3-button w3-bar-item">Home</a>
   <a href="#band" class="w3-button w3-bar-item">Band</a>
   <a href="#tour" class="w3-button w3-bar-item">Tour</a>
