--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body>
 
-<!-- Navigation -->
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
+<div id="nav">
+	<ul>
+		<li><a href="#">About Us</a></li>
+		<li><a href="#">Our Products</a></li>
+		<li><a href="#">FAQs</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="#">Login</a></li>
+	</ul>
+</div>
 
 <!-- Slide Show -->
 <section>
