--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <title>https://devilking6105.github.io/hthcoin/</title>
-<body>
+<body bgcolor="#000">
 
 <div id="nav">
 	<ul>
