--- a/downloads.html
+++ b/downloads.html
@@ -42,7 +42,7 @@
 <div id="nav">
 	<ul>
 		<li><a href="#">About Us</a></li>
-		<li><a href="#">Our Products</a></li>
+		<li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
 		<li><a href="#">FAQs</a></li>
 		<li><a href="#">Contact</a></li>
 		<li><a href="#">Login</a></li>
