--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <div id="nav">
 	<ul>
-		<li><a href="#">About Us</a></li>
+		<li><a href="https://devilking6105.github.io/hthcoin/index.html">Home</a></li>
 		<li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
 		<li><a href="#">FAQs</a></li>
 		<li><a href="#">Contact</a></li>
-		<li><a href="#">Login</a></li>
+		<li><a href="#">About Us</a></li>
 	</ul>
 </div>
 
