--- a/downloads.html
+++ b/downloads.html
@@ -13,6 +13,13 @@
     <link href="Downloads/style.css" rel="stylesheet">
     <link href="Downloads/responsive.css" rel="stylesheet">
     <link href="https://hthcoin.world/favicon.ico" rel="icon">
+    <link href="Resources/bootstrap.css" rel="stylesheet">
+    <link href="Resources/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="Resources/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="Resources/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="Resources/style.css" rel="stylesheet">
+    <link href="Resources/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">	
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -29,6 +36,15 @@
 
         gtag('config', 'UA-121537271-1');
 </script>
+	
+<script type="text/javascript" async="" src="Resources/analytics.js"></script><script async="" src="Resources/js.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-121537271-1');
+    </script>	
 
 <title>https://devilking6105.github.io/hthcoin/</title>
 
@@ -83,6 +99,54 @@
     </div>
 </section>
 <!-- End Work Section -->
+	
+	
+<!-- Event Section -->
+<section class="event-section">
+    <div class="auto-container">
+        <div class="event-list">
+            <div class="row clearfix">
+                <!-- FAQ Block -->
+                <div class="event-block col-xs-12">
+                    <div class="inner-box">
+                        <div class="content-box">
+                            <!-- cached: 2018-12-21 10:06:30pm -->
+<h2>Resources</h2>
+<ul>
+<li><a href="https://www.coingecko.com/en/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://www.coingecko.com/en/coins/help-the-homeless-coin</a></li>
+<li><a href="https://coinmarketcal.com/coin/help-the-homeless-coin" target="_blank" rel="nofollow">https://coinmarketcal.com/coin/help-the-homeless-coin</a></li>
+<li><a href="https://walletinvestor.com/currency/help-the-homeless-coin" target="_blank" rel="nofollow">https://walletinvestor.com/currency/help-the-homeless-coin</a></li>
+<li><a href="https://www.coinmarkets.net/currencies/help-the-homeless-coin/" target="_blank" rel="nofollow">https://www.coinmarkets.net/currencies/help-the-homeless-coin/</a></li>
+<li><a href="https://coinpaprika.com/coin/hth-help-the-homeless-coin/" target="_blank" rel="nofollow">https://coinpaprika.com/coin/hth-help-the-homeless-coin/</a></li>
+<li><a href="https://www.cheddur.com/coins/help-the-homeless" target="_blank" rel="nofollow">https://www.cheddur.com/coins/help-the-homeless</a></li>
+<li><a href="https://coindata.vc/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://coindata.vc/coins/help-the-homeless-coin</a></li>
+<li><a href="https://coinlib.io/coin/HTH/Help+The+Homeless+Coin" target="_blank" rel="nofollow">https://coinlib.io/coin/HTH/Help+The+Homeless+Coin</a></li>
+<li><a href="https://cryptobridgecap.org/market/HTH_BTC" target="_blank" rel="nofollow">https://cryptobridgecap.org/market/HTH_BTC</a></li>
+<li><a href="https://isthiscoinascam.com/check/help-the-homeless-coin" target="_blank" rel="nofollow">https://isthiscoinascam.com/check/help-the-homeless-coin</a></li>
+<li><a href="https://www.marketbeat.com/cryptocurrencies/help-the-homeless-coin/" target="_blank" rel="nofollow">https://www.marketbeat.com/cryptocurrencies/help-the-homeless-coin/</a></li>
+<li><a href="https://www.apogeecrypto.com/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://www.apogeecrypto.com/coins/help-the-homeless-coin</a></li>
+<li><a href="https://masternodec.com/HTH.html" target="_blank" rel="nofollow">https://masternodec.com/HTH.html</a></li>
+</ul>
+<p>Danish:</p>
+<ul>
+<li><a href="https://www.euroinvestor.dk/boerser/kryptovaluta/help-the-homeless-coin/34578173" target="_blank" rel="nofollow">https://www.euroinvestor.dk/boerser/kryptovaluta/help-the-homeless-coin/34578173</a></li>
+</ul>
+<p>Russian:</p>
+<ul>
+<li><a href="https://hulk.center/coin/HTH" target="_blank" rel="nofollow">https://hulk.center/coin/HTH</a></li>
+<li><a href="https://www.masterinvest.info/cryptocurrency-HTH-help-the-homeless-coin.html" target="_blank" rel="nofollow">https://www.masterinvest.info/cryptocurrency-HTH-help-the-homeless-coin.html</a></li>
+</ul>
+<p>Mining calcs:</p>
+<ul>
+<li><a href="https://shittomine.com/calculator/coin/HTH/" target="_blank" rel="nofollow">https://shittomine.com/calculator/coin/HTH/</a></li>
+<li><a href="https://everipedia.org/wiki/giving-back-with-cryptocurrencies/" target="_blank" rel="nofollow">https://everipedia.org/wiki/giving-back-with-cryptocurrencies/</a></li>
+</ul>                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
