--- a/downloads.html
+++ b/downloads.html
@@ -111,7 +111,7 @@
                     <div class="inner-box">
                         <div class="content-box">
                             <!-- cached: 2018-12-21 10:06:30pm -->
-<h2>Resources</h2>
+<h2 style="text-align: center"><font style="color: #debf12">Resources</font></h2>
 <ul>
 <li><a href="https://www.coingecko.com/en/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://www.coingecko.com/en/coins/help-the-homeless-coin</a></li>
 <li><a href="https://coinmarketcal.com/coin/help-the-homeless-coin" target="_blank" rel="nofollow">https://coinmarketcal.com/coin/help-the-homeless-coin</a></li>
