--- a/downloads.html
+++ b/downloads.html
@@ -63,6 +63,7 @@
 </div>
 
 <!-- Work Section -->
+	<h2 style="text-align: center"><font style="color: #debf12">Resources</font></h2>
 <section class="work-section style-two alternate">
     <div class="auto-container">
         <!-- Work Steps -->
@@ -112,7 +113,7 @@
                         <div class="content-box">
                             <!-- cached: 2018-12-21 10:06:30pm -->
 <h2 style="text-align: center"><font style="color: #debf12">Resources</font></h2>
-<ul>
+<ul style="text-align: center">
 <li><a href="https://www.coingecko.com/en/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://www.coingecko.com/en/coins/help-the-homeless-coin</a></li>
 <li><a href="https://coinmarketcal.com/coin/help-the-homeless-coin" target="_blank" rel="nofollow">https://coinmarketcal.com/coin/help-the-homeless-coin</a></li>
 <li><a href="https://walletinvestor.com/currency/help-the-homeless-coin" target="_blank" rel="nofollow">https://walletinvestor.com/currency/help-the-homeless-coin</a></li>
@@ -127,17 +128,17 @@
 <li><a href="https://www.apogeecrypto.com/coins/help-the-homeless-coin" target="_blank" rel="nofollow">https://www.apogeecrypto.com/coins/help-the-homeless-coin</a></li>
 <li><a href="https://masternodec.com/HTH.html" target="_blank" rel="nofollow">https://masternodec.com/HTH.html</a></li>
 </ul>
-<p>Danish:</p>
-<ul>
+<p style="text-align: center"><font style="color: #debf12">Danish:</p>
+<ul style="text-align: center">
 <li><a href="https://www.euroinvestor.dk/boerser/kryptovaluta/help-the-homeless-coin/34578173" target="_blank" rel="nofollow">https://www.euroinvestor.dk/boerser/kryptovaluta/help-the-homeless-coin/34578173</a></li>
 </ul>
-<p>Russian:</p>
-<ul>
+<p style="text-align: center"><font style="color: #debf12">Russian:</p>
+<ul style="text-align: center">
 <li><a href="https://hulk.center/coin/HTH" target="_blank" rel="nofollow">https://hulk.center/coin/HTH</a></li>
 <li><a href="https://www.masterinvest.info/cryptocurrency-HTH-help-the-homeless-coin.html" target="_blank" rel="nofollow">https://www.masterinvest.info/cryptocurrency-HTH-help-the-homeless-coin.html</a></li>
 </ul>
-<p>Mining calcs:</p>
-<ul>
+<p style="text-align: center"><font style="color: #debf12">Mining calcs:</p>
+<ul style="text-align: center">
 <li><a href="https://shittomine.com/calculator/coin/HTH/" target="_blank" rel="nofollow">https://shittomine.com/calculator/coin/HTH/</a></li>
 <li><a href="https://everipedia.org/wiki/giving-back-with-cryptocurrencies/" target="_blank" rel="nofollow">https://everipedia.org/wiki/giving-back-with-cryptocurrencies/</a></li>
 </ul>                        </div>
