--- a/resources.html
+++ b/resources.html
@@ -1,3 +1,14 @@
+
+<link href="Resources/bootstrap.css" rel="stylesheet">
+    <link href="Resources/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="Resources/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="Resources/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="Resources/style.css" rel="stylesheet">
+    <link href="Resources/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">	
+
+
+
 <!-- Event Section -->
 <section class="event-section">
     <div class="auto-container">
