--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,15 @@
     <link href="https://hthcoin.world/favicon.ico" rel="icon">	
 
 
+<script type="text/javascript" async="" src="Resources/analytics.js"></script><script async="" src="Resources/js.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-121537271-1');
+    </script>	
+
 
 <!-- Event Section -->
 <section class="event-section">
