--- a/resources.html
+++ b/resources.html
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link href="Resources/bootstrap.css" rel="stylesheet">
     <link href="Resources/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
     <link href="Resources/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
