--- a/index.html
+++ b/index.html
@@ -8,15 +8,50 @@
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body bgcolor="#000">
 
-<div id="nav">
-	<ul>
-		<li><a href="https://devilking6105.github.io/hthcoin/index.html">Home</a></li>
-		<li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
-		<li><a href="#">FAQs</a></li>
-		<li><a href="#">Contact</a></li>
-		<li><a href="#">About Us</a></li>
-	</ul>
-</div>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+	<!-- Nav Bar -->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="https://devilking6105.github.io/hthcoin/index.html">Help The Homeless Coin</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="https://devilking6105.github.io/hthcoin/index.html">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Technicals<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/specifications.html">Specifications</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/resources.html#">Resources</a></li>
+          </ul>
+        </li>
+       <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/team.html">Meet Team</a></li>
+	    <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/contact.html">Contact</a></li>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Info<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/FAQ.html">Meet Team</a></li>
+	    <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/contact.html">Contact</a></li>
+      </ul>
+     
+    </div>
+  </div>
+</nav>
 
 <!-- Slide Show -->
 <section>
