--- a/index.html
+++ b/index.html
@@ -23,32 +23,52 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="https://devilking6105.github.io/hthcoin/index.html">Help The Homeless Coin</a>
+      <a class="navbar-brand" href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="https://devilking6105.github.io/hthcoin/index.html">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Technicals<span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/specifications.html">Specifications</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/resources.html#">Resources</a></li>
+            <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
+        </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
           </ul>
         </li>
-       <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<span class="caret"></span></a>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/specifications.html">Specs</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/FAQ.html">FAQ</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/resources.html">Resources</a></li>
+            <li><a href="https://github.com/HTHcoin/HTH/wiki/HTH-Help-The-Homeless-Coin-wiki/" target="_blank">Wiki</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="https://devilking6105.github.io/hthcoin/team.html">Meet Team</a></li>
-	    <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
+            <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/contact.html">Contact</a></li>
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Info<span class="caret"></span></a>
+         </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Exchanges <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/FAQ.html">Meet Team</a></li>
-	    <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/contact.html">Contact</a></li>
+            <li><a href="https://wallet.crypto-bridge.org/market/BRIDGE.HTH_BRIDGE.BTC" target="_blank"">Crypto-Bridge</a></li>
+            <li><a href="https://smartrade.com/">SmarTrade</a></li>
+         </ul>
+        </li>
+        <li><a href="http://explorer.hth.world">Explorer</a></li>
       </ul>
-     
     </div>
   </div>
 </nav>
