--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@ not only hold governments but yourself accountable for ensuring a better
  future for every person. This all starts here."</p>
                     </div>
                     <div class="btn-box">
-                        <a href="https://devilking6105.github.io/hthcoin/FAQ.html" class="theme-btn btn-style-one"><span>Read our FAQ</span></a>
+                        <a href="https://hthcoin.github.io/web/Faq.html" class="theme-btn btn-style-one"><span>Read our FAQ</span></a>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <span class="icon flaticon-people"></span>
+                            <img src="images/people.svg"/>
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -172,7 +172,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <span class="icon flaticon-love-planet"></span>
+                            <img src="images/love-planet.svg"/>
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -182,7 +182,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <span class="icon flaticon-heart-2"></span>
+                            <img src="images/heart-2.svg"/>
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -192,7 +192,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <span class="icon flaticon-pacifism"></span>
+                           <img src="images/pacifism.svg"/>
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
