--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="images/people.svg"/>
+                            <img src="img/people.svg"/>
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -172,7 +172,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="images/love-planet.svg"/>
+                            <img src="img/love-planet.svg"/>
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -182,7 +182,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="images/heart-2.svg"/>
+                            <img src="img/heart-2.svg"/>
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -192,7 +192,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="images/pacifism.svg"/>
+                           <img src="img/pacifism.svg"/>
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
