--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="https://landforthehomeless.org">L4H</a></li>
+            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
+            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
+	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
+	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
           </ul>
         </li>
         <li class="dropdown">
