--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
