--- a/downloads.html
+++ b/downloads.html
@@ -5,20 +5,37 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <title>https://devilking6105.github.io/hthcoin/</title>
-<body bgcolor="#000">
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<!-- Stylesheets -->
+    <link href="Downloads/bootstrap.css" rel="stylesheet">
+    <link href="Downloads/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="Downloads/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="Downloads/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="Downloads/style.css" rel="stylesheet">
+    <link href="Downloads/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">
+    <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<script type="text/javascript" async="" src="Downloads/analytics.js"></script><script async="" src="Downloads/js.js"></script>
 
-<script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="Downloads/analytics.js"></script><script async="" src="Downloads/js.js"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
+
         gtag('config', 'UA-121537271-1');
-</script>
+    </script>	
+	
+	
+  <title>https://devilking6105.github.io/hthcoin/</title>
+<body bgcolor="#000">
+
 	
 	
 </head>
