--- a/charity.html
+++ b/charity.html
@@ -95,7 +95,7 @@
 </nav>
 
 <!--Page Title-->
-<section class="page-title" style="background-image:url(images/background/homeless-2223116_1280.jpg); background-position: bottom;">
+<section class="page-title" style="background: #000">
     <div class="auto-container">
         <h1>Charitable Fund</h1>
     </div>
