--- a/about.html
+++ b/about.html
@@ -47,7 +47,10 @@
     color: #34bcaa;
     background-color: #000;
 }
-		
+		a {
+    color: #debf12;
+    text-decoration: none;
+}
 	
 	</style>
 
